--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LGM Studio - Belleza Profesional</title>
+    <meta name="description" content="Servicios de belleza ofrecidos por Gabriela Sanchez del Campo Navarro">
+    <meta name="keywords" content="Gaby Baracoa Depilacion Cejas Maquillaje Sanchez del Campo LGM ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
